--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,8 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/@syncfusion/ej2-base/styles/material.css",
+              "node_modules/@syncfusion/ej2-angular-popups/styles/material.css",
               "node_modules/@syncfusion/ej2-angular-kanban/styles/material.css",
               "node_modules/@syncfusion/ej2-angular-dropdowns/styles/material.css"
             ],
