--- a/angular.json
+++ b/angular.json
@@ -22,14 +22,11 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.json"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/@syncfusion/ej2-base/styles/material.css",
-              "node_modules/@syncfusion/ej2-angular-popups/styles/material.css",
-              "node_modules/@syncfusion/ej2-angular-kanban/styles/material.css",
-              "node_modules/@syncfusion/ej2-angular-dropdowns/styles/material.css"
+              "src/styles.css"
             ],
             "scripts": []
           },
@@ -39,7 +36,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumError": "4mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -58,7 +55,7 @@
               "namedChunks": true
             }
           },
-          "defaultConfiguration": "production"
+          "defaultConfiguration": "development"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
