--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "build": "ng build --configuration=production && node remove-inline-onload.js",
+    "watch": "ng build --watch --configuration development && node remove-inline-onload.js",
     "test": "ng test"
   },
   "private": true,
