patched column custom template bug

--- a/package.json
+++ b/package.json
@@ -18,9 +18,16 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
-    "@syncfusion/ej2-angular-dropdowns": "^26.1.42",
-    "@syncfusion/ej2-angular-kanban": "^26.1.40",
+    "@syncfusion/ej2-angular-buttons": "^26.2.5",
+    "@syncfusion/ej2-angular-calendars": "^26.2.5",
+    "@syncfusion/ej2-angular-dropdowns": "^26.2.5",
+    "@syncfusion/ej2-angular-inputs": "^26.2.5",
+    "@syncfusion/ej2-angular-kanban": "^26.2.5",
+    "@syncfusion/ej2-angular-layouts": "^26.2.5",
+    "@syncfusion/ej2-angular-lists": "^26.2.5",
+    "@syncfusion/ej2-angular-navigations": "^26.2.5",
     "@syncfusion/ej2-angular-popups": "^26.2.5",
+    "@syncfusion/ej2-base": "^26.2.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
