added app icons

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,12 @@
   "description": "extension desc",
   "version": "1.0",
   "action": {
-    "default_popup": "index.html"
+    "default_popup": "index.html",
+    "default_icon": {
+      "16": "assets/icons/icon16.png",
+      "48": "assets/icons/icon48.png",
+      "128": "assets/icons/icon128.png"
+    }
   },
   "permissions": [],
   "content_security_policy": {
